force-app/main/default/objects/Application_Stage_Access__mdt/Application_Stage_Access__mdt.object-meta.xml
<CustomObject>
    <label>Application Stage Access</label>
    <pluralLabel>Application Stage Access</pluralLabel>
</CustomObject>