force-app/main/default/objects/Application_Stage_Access__mdt/fields/Create__c.field-meta.xml
<CustomField>
    <fullName>Create__c</fullName>
    <label>Create</label>
    <length>100</length>
    <type>Text</type>
</CustomField>