force-app/main/default/objects/Application_Stage_Access__mdt/fields/Edit__c.field-meta.xml
<CustomField>
    <fullName>Edit__c</fullName>
    <label>Edit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>