force-app/main/default/objects/Application_Stage_Access__mdt/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <length>100</length>
    <type>Text</type>
</CustomField>